--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -7,86 +7,35 @@
     </script>
 {% endblock myscripts %}
 
-    {% block topStuff %}
-    {% if segmentsJson %}
     
-    	<div id="topStuff">
-    			<div id="controllers" > 
-    			<br/>
-    			<div class="controller_div">
-	          	<a class="btn btn-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
-	              <i id="playbutton" class="icon-play active"></i>
-	              </a>
-	            <a class="btn btn-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
-	              <i id="pausebutton" class="icon-pause"></i>
-	              </a>
-	             </div>
-	          </div>
-	    	<div id="infoTable">
-	    	<table>
-	    		{% if episode %}
-		   			<tr>
-		   				<td> <b> {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}: </b> </td>
-		   				<td> {{ episode.shortName }} </td>
-		   			</tr>
-	   			{% endif %}
-	   		</table>
-	   		</div>
-   		</div>
-
+		{% block ribbonSlider %}
  		<fieldset id="videoFieldset">
-		 	  <div id="masterSlider" class="masterSlider"></div>
+		 	  <div id="masterSlider" class="masterSlider" ><br/></div>
  		</fieldset>
- 		 {% endif %}
-		{% endblock topStuff %}
+ 		{% endblock ribbonSlider %}
 
-        
-        {% block otherPackery %}
-        {% if segmentsJson %}
-       	<div class="item {% if sources|length > 1 %}w2{% endif %} freeAspect" id="notesDiv" style="background-color:#F9FADE;">
-       	<div id="messageDiv">
-		</div>
-		<table id="notes_list" class="display">
-		</table>
-       	</div>
-       	{% endif %}
-        {% endblock otherPackery %}
-
-{% block myNotesSetup %}
-{% if sources|length = 1 %}
-{% with filter="flight__name"|add:":"|add:episode.shortName|add:"_"|add:sources.0.shortName%}
-	var thefilter = '{{filter}}';
-	var recordedNotesURL = "{% url 'xgds_map_server_objectsJson_force' 'XGDS_NOTES_NOTE_MODEL' filter %}";
-{% endwith %}
-{% else %}
-{% with filter="flight__group__episode__shortName"|add:":"|add:episode.shortName %}
-	var thefilter = '{{filter}}';
-	var recordedNotesURL = "{% url 'xgds_map_server_objectsJson_force' 'XGDS_NOTES_NOTE_MODEL' filter %}";
- {% endwith %}
-{% endif %}
-	var minHeight = 200;
-	var recordedNotesOptions = {
-					           recordedNotesURL: recordedNotesURL,
-							   columns: {{ settings.XGDS_NOTES_TABLE_DEFAULT_COLUMNS|safe }},
-						       ordering: "desc",
-						       divHeight: minHeight,
-						       editable: {% if settings.GEOCAM_UTIL_DATATABLES_EDITOR %}true{% else %} false {% endif %}
-					       };
-{% if SSE %}
-					       	recordedNotesOptions['SSE'] = true;
-							recordedNotesOptions['liveNotesStreamURL'] = "{% url 'xgds_notes_liveNotes_stream'  %}" +  thefilter;
-{% endif %}
-	var recordedNotesController = new recordedNotes.RecordedNotesController(recordedNotesOptions);
-
-{% endblock myNotesSetup %}
-
-	{% block hookControls %}
-	{% if segmentsJson %}
-    xgds_video.presizeVideoDivs();
-
-    //set up the player
-    xgds_video.initialize(xgds_video_options);
-    xgds_video.setupJWplayer({"mute":true}, false, "100%");
-    xgds_notes.setupNotesUI();
-    {% endif %}
-    {% endblock hookControls %}
+    {% block xgds_video_options %}
+	var xgds_video = xgds_video || {};
+    var xgds_video_options = { playFlag: true,
+                       		   seekFlag: false,
+		                       initialState: false,
+		                       seekOffsetList: {},
+		                       baseUrl: "{{ baseUrl }}",
+		                       episode: {{ episodeJson|safe }},
+		                       displaySegments: {{ segmentsJson|safe }},
+		                       firstSegment: null,
+		                       lastSegment: null,
+		                       onTimePlayer: "{{ sources.0.shortName }}",
+		                       movingSlider: false, //if slider is moving, turn off onTime call
+		                       seekOffsetList: {}, //needed for seeking vid in flash mode,
+		                       indexFileUrl: indexFileUrl,
+			                   noteTimeStamp: xgds_video.toJsDateTime({{ noteTimeStamp|safe }}),
+			                   flightName: {% if flightName %} "{{ flightName }}" {% else %} null {% endif %},
+			                   sourceVehicle: {{ sourceVehicle|safe }},
+			                   timeZone: '{{ flightTZ }}',
+        					   hasMasterSlider:false
+		                     };
+	$('#playbutton').addClass("active");
+	$('#pausebutton').removeClass("active");
+	{% endblock xgds_video_options %}
+	
