call startPlayers on ready

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -246,5 +246,8 @@ var indexFileUrl = null;
 	
 	{% block lastJsInit %}
 	initializePackery();
+	$(function() {
+		xgds_video.startPlayers();
+	});
 	{% endblock lastJsInit %}
  {% endblock jsInit %}
