--- a/xgds_video/attic/templates/video_feeds.html
+++ b/xgds_video/attic/templates/video_feeds.html
@@ -7,6 +7,7 @@
  <!-- END TODO -->
  <script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
  <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+ <script src="{{ EXTERNAL_URL }}jquery-tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
   <script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
@@ -15,14 +16,11 @@
  	var maxWidth = getMaxWidth({{videoFeedData|length}});
  	var isLive = true;
 </script>
-{% if False %}
- <script src="{{ STATIC_URL }}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
- {% endif %}
  {% endblock headExtras %}
  
  {% block cssExtras %}
  {{ block.super }}
-<!-- <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link> -->
+<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
 <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
 {% endblock cssExtras %}
@@ -37,10 +35,6 @@
     {{ block.super }}
     {% endblock %}
     
-    {% block sitemenu-content-secondary %}
-	{% include "xgds_video/video_subnav.html" %}
-    {% endblock %}
-	
 {% block contents %}
 If plugin is missing, download <a href="https://support.google.com/chrome/answer/2445742?hl=en">Quicktime Plugin For Chrome</a>
 
@@ -80,6 +74,7 @@ If plugin is missing, download <a href="https://support.google.com/chrome/answer
 {% endblock %}
 
 {% block jsInit %}
+{% include "xgds_video/init_notes.js" %}
 function resizeWindow(index, counter){
 	width = 0;
 	height = 0;
