--- a/xgds_video/templates/xgds_video/video_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_live_playbacks.html
@@ -43,11 +43,11 @@
         {% for source, noteform in zipped %}
         <div id="view-gridstack-item-{{source.name}}" class="grid-stack-item" 
 		data-gs-x="{{ forloop.counter0|multiply:3 }}" data-gs-y="0"
-        data-gs-width="3" data-gs-height="2" >
+        data-gs-width="{% if zipped.count > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
-	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_live_source' source.shortName %}" target="{% if zipped|length > 1 %}{{episode.shortName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
+	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_live_source' source.shortName %}" target="{% if zipped.count > 1 %}{{episode.shortName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
 	            </div>
 				<section id="{{source.shortName}}_noteInput">
              		{% include "xgds_video/video_notes.html" with data=noteform source=source.shortName STATIC_URL=STATIC_URL %}
@@ -111,7 +111,7 @@
 	xgds_notes.setupNotesUI();
 	{% block myNotesSetup %}
     var minHeight = 200;
-	{% if zipped|length = 1 %}
+	{% if zipped.count = 1 %}
 	{% with filter="flight__name"|add:":"|add:episode.shortName|add:"_"|add:zipped.0.0.shortName%}
 		var thefilter = '{{filter}}';
 		var recordedNotesURL = "{% url 'xgds_map_server_objectsJson_force' 'XGDS_NOTES_NOTE_MODEL' filter %}";
@@ -136,4 +136,6 @@
 	{% endif %}					       
 	var recordedNotesController = new recordedNotes.RecordedNotesController(recordedNotesOptions);
 	{% endblock myNotesSetup %}
+	
+	$.find(".player").resizable('destroy');
 {% endblock otherJSInit %}
