use new vlc to not need segmenter

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -202,7 +202,8 @@ div.ui-slider-range.ui-widget-header {
 	float:left; 
 	height:15px;
 	padding-bottom:2px;
-	color: red;
+	color: black;
+	font-weight: bold;
 }
 
 blocky div label input{
