--- a/xgds_video/templates/xgds_video/video_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_live_playbacks.html
@@ -137,4 +137,6 @@
 	var recordedNotesController = new recordedNotes.RecordedNotesController(recordedNotesOptions);
 	{% endblock myNotesSetup %}
 	
+	xgds_video.disableGridstackResizing();  // so we can double click to full screen video
+	
 {% endblock otherJSInit %}
