playback in live delay mode works when there are multiple segments

--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -3,7 +3,7 @@
 {% block myscripts %} 
 	{{block.super}}
 	<script type="text/javascript">
-        var isLive = true;
+        isLive = true;
     </script>
 {% endblock myscripts %}
 
