--- a/xgds_video/templates/xgds_video/video_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_live_playbacks.html
@@ -43,10 +43,13 @@
         {% for source, noteform in zipped %}
         <div id="view-gridstack-item-{{source.name}}" class="grid-stack-item" 
 		data-gs-x="{{ forloop.counter0|multiply:3 }}" data-gs-y="0"
-        data-gs-width="{% if zipped.count > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
+        data-gs-width="{% if zipped|length > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
+        		<i class="{% if zipped|length > 1 %}icon-lock-open{% else %}icon-lock {% endif %} pinDiv warning"></i>
 	            <div class="buttons">
-	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
+	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
+             		<span class="hint">Doubleclick on the video to make it full screen.</span>
+             		{% endif %}</div>
 	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_live_source' source.shortName %}" target="{% if zipped.count > 1 %}{{episode.shortName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
 	            </div>
 				<section id="{{source.shortName}}_noteInput">
@@ -65,6 +68,7 @@
 		data-gs-x="0" data-gs-y="4"
         data-gs-width="6" data-gs-height="3">
         <div class="grid-stack-item-content " id="notesDiv" style="background-color:#F9FADE;">
+        	<i class="icon-lock pinDiv warning"></i>
         	<div id="messageDiv">
             </div>
             <table id="notes_list" class="notes_list display">
@@ -126,9 +130,5 @@
 	{% endif %}					       
 	var recordedNotesController = new recordedNotes.RecordedNotesController(recordedNotesOptions);
 	{% endblock myNotesSetup %}
-	
-	{% if zipped.count == 1 %}
-	xgds_video.disableGridstackResizing();  // so we can double click to full screen video
-	{% endif %}
 	
 {% endblock otherJSInit %}
