--- a/xgds_video/templates/xgds_video/video_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_live_playbacks.html
@@ -46,6 +46,7 @@
         data-gs-width="{% if zipped|length > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
         		<i class="{% if zipped|length > 1 %}icon-lock-open{% else %}icon-lock {% endif %} pinDiv warning"></i>
+			<i class="icon-arrows-ccw right" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
              		<span class="hint">Doubleclick on the video to make it full screen.</span>
