--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -92,7 +92,7 @@
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
 	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
-                     <a class="mybutton toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a>
+                     <!-- <a class="mybutton toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
                      {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
@@ -212,7 +212,6 @@ var indexFileUrl = null;
     	xgds_video.setupSlider();
     }
     xgds_video.setupJWplayer({"mute":true}, "100%");
-    xgds_notes.setupNotesUI();
     {% endif %}
     {% endblock hookControls %}
     
@@ -252,6 +251,7 @@ var indexFileUrl = null;
 	initializePackery();
 	$(function() {
 		xgds_video.startPlayers();
+		xgds_notes.setupNotesUI();
 	});
 	{% endblock lastJsInit %}
  {% endblock jsInit %}
