work in progress overhaul of video with notes, live is tested working.  need to test recorded.  may debug printouts in place

--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -1,16 +1,16 @@
-	<script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
-     <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script>
+	<!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script> -->
+	<!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
+     <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script> -->
     <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jwplayer/jwplayer.js"></script>
- 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/packem.js"></script>
+ 	<!-- <script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/packem.js"></script> -->
  	<script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" ></script>
     <script type="text/javascript">
         jwplayer.key="{{ settings.JWPLAYER_KEY }}";
         STATIC_URL='{{ STATIC_URL }}';
         var submitNoteUrl = "{% url 'record_simple' %}";
 		var videoStillViewerUrl = "{% url 'videoStillViewer' %}";
-        var isLive = false;
+        var isLive = {% if isLive %} true {% else %} false {% endif %};
     </script>
     <script type="text/javascript" src="{{STATIC_URL}}xgds_video/js/video_size_utils.js"  ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
